# sotw-app

./: .gitattributes  .gitignore  .ignore  shell.nix
server/: LICENSE  Server.cabal  docker-compose.yml  flake.nix
server/app/: API.hs  Main.hs  Schema.hs
server/pg/init-scripts/: add-users.sql
