cabal-version:      3.4
name:               Server
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-2-Clause
license-file:       LICENSE
author:             Patrick Aldis
maintainer:         patrick.aldis@virginmedia.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable Server
    import:           warnings
    main-is:          Main.hs
    other-modules:
                      API
    build-depends:    base,
                      text,
                      warp,
                      wai,
                      wai-cors,
                      servant,
                      servant-server,
                      persistent,
                      persistent-postgresql,
                      bytestring,
                      aeson,
                      monad-logger,
                      mtl

    hs-source-dirs:   app
    default-language: Haskell2010
